--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,16 +21,23 @@
 				"ms-azuretools.vscode-docker"
 			],
 			"settings": {
-				"editor.formatOnSave": true,
 				"[python]": {
+					"editor.formatOnSave": true,
+					"editor.codeActionsOnSave": {
+						"source.fixAll": "explicit",
+						"source.organizeImports": "explicit"
+					},
 					"editor.defaultFormatter": "charliermarsh.ruff"
 				}
 			}
 		}
-	},
-	"forwardPorts": [8000]
-	// Uncomment the next line to run commands after the container is created.
-	// "postCreateCommand": "cat /etc/os-release",
-	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "devcontainer"
+	}
+},
+"forwardPorts": [
+	8000
+]
+// Uncomment the next line to run commands after the container is created.
+// "postCreateCommand": "cat /etc/os-release",
+// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
+// "remoteUser": "devcontainer"
 }
