--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,43 +1,30 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-	"name": "Existing Dockerfile",
-	"build": {
-		// Sets the run context to one level up instead of the .devcontainer folder.
-		"context": "..",
-		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
-		"dockerfile": "../Dockerfile",
-		"target": "development"
-	},
+	"name": "Development Environment",
+	"dockerComposeFile": "docker-compose.yml",
+	"service": "devcontainer",
+	"workspaceFolder": "/app",
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {},
 		"ghcr.io/nils-geistmann/devcontainers-features/zsh:0": {}
 	},
-	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
 			"extensions": [
+				"ms-vscode-remote.remote-containers",
 				"charliermarsh.ruff",
-				"ms-azuretools.vscode-docker"
-			],
-			"settings": {
-				"[python]": {
-					"editor.formatOnSave": true,
-					"editor.codeActionsOnSave": {
-						"source.fixAll": "explicit",
-						"source.organizeImports": "explicit"
-					},
-					"editor.defaultFormatter": "charliermarsh.ruff"
-				}
-			}
+				"ms-azuretools.vscode-docker",
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				"ms-python.debugpy"
+			]
 		}
-	}
-},
-"forwardPorts": [
-	8000
-]
-// Uncomment the next line to run commands after the container is created.
-// "postCreateCommand": "cat /etc/os-release",
-// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
-// "remoteUser": "devcontainer"
+	},
+	"forwardPorts": [
+		8000
+	],
+	"mounts": [
+		"source=zsh-history,type=volume,target=/app/.zsh_history" // Persist zsh history
+	],
 }
