--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,10 @@
 {
     "recommendations": [
-      "ms-vscode-remote.remote-containers"
+      "ms-vscode-remote.remote-containers",
+      "charliermarsh.ruff",
+      "ms-azuretools.vscode-docker",
+      "ms-python.python",
+      "ms-python.vscode-pylance",
+      "ms-python.debugpy"
     ]
   }
