--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,5 @@
 {
     "recommendations": [
-      "ms-vscode-remote.remote-containers",
-      "charliermarsh.ruff",
-      "ms-azuretools.vscode-docker",
-      "ms-python.python",
-      "ms-python.vscode-pylance",
-      "ms-python.debugpy"
+      "ms-vscode-remote.remote-containers"
     ]
-  }
+}
